--- a/心得.md
+++ b/心得.md
@@ -19,7 +19,7 @@ void deleteTreeNode(TNode *&node) {
 }
 ```
 
-<img src="./assets/image-20251217191153669.png" alt="image-20251217191153669" style="zoom:50%;" /><img src="./assets/image-20251217191216645.png" alt="./assets/image-20251217191216645" style="zoom:50%;" /><img src="C:\Users\Abalone\AppData\Roaming\Typora\typora-user-images\image-20251217191232115.png" alt="image-20251217191232115" style="zoom:50%;" />
+<img src="./assets/image-20251217191153669.png" alt="image-20251217191153669" style="zoom:50%;" /><img src="./assets/image-20251217191216645.png" alt="image-20251217191216645" style="zoom:50%;" /><img src="./assets/image-20251217191232115.png" alt="image-20251217191232115" style="zoom:50%;" />
 
 下面三幅图分别对应初始状态，第一步和第二步
 
